--- a/Resources/views/opcontent.html.twig
+++ b/Resources/views/opcontent.html.twig
@@ -6,7 +6,7 @@
 	{{ knp_menu_render(cmfMainContent.id) }}
 
     <section id="{{ cmfMainContent.name }}" name="{{ cmfMainContent.name }}">
-	   {{ cmfMainContent.body }}
+	   {{ cmfMainContent.body | raw }}
     </section>
 
     {% for sectionContent in cmfMainContent.sectionChildren if cmf_is_published(sectionContent) %}
