--- a/Resources/views/opsection.html.twig
+++ b/Resources/views/opsection.html.twig
@@ -2,7 +2,7 @@
     <h1>{{ sectionContent.title }}</h1>
     {% if sectionContent.content and if cmf_is_published(sectionContent.content) %}
     	{% if sectionContent.content.body is defined %}
-            <div>{{ sectionContent.content.body }}</div>
+            <div>{{ sectionContent.content.body | raw }}</div>
         {% else %}
         	<div>{{ sonata_block_render(sectionContent.content) }}</div>
         {% endif %}
